Update Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb

--- a/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
+++ b/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
@@ -400,6 +400,11 @@
     "print(next(gen))  # ➜ 0\n",
     "print(next(gen))  # ➜ 1\n",
     "```"
+    "### 🔍 Bonus : if...else dans une list comprehension\n",
+    "```python\n",
+    "resultats = ["pair" if x % 2 == 0 else "impair" for x in range(5)]\n",
+    @print(resultats)  # ➜ ['pair', 'impair', 'pair', 'impair', 'pair']\n",
+    "```\n",
    ]
   },
   {
