--- a/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
+++ b/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
@@ -339,9 +339,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eef95a68-4386-478e-a83b-73ac926ecbb1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "494d620d-aa78-41d1-82cd-1e7f3d5bb777",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## G : Compréhensions : `list`, `dict`, `set`, `gen`\n",
     "\n",
@@ -403,8 +405,8 @@
     "\n",
     "### 🔍 Bonus : if...else dans une list comprehension\n",
     "```python\n",
-    "resultats = ["pair" if x % 2 == 0 else "impair" for x in range(5)]\n",
-    @print(resultats)  # ➜ ['pair', 'impair', 'pair', 'impair', 'pair']\n",
+    "resultats = [\"pair\" if x % 2 == 0 else \"impair\" for x in range(5)]\n",
+    "print(resultats)  # ➜ ['pair', 'impair', 'pair', 'impair', 'pair']\n",
     "```"
    ]
   },
