--- a/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
+++ b/Python Avancé - 01 Fonctions avancees et Programmetion fonctionnelle.ipynb
@@ -18,22 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4b8e49b3-8d22-4fdf-83f9-1ec5af26b030",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "args: (1, 2, 3)\n",
-      "kwargs: {'a': 10, 'b': 20}\n"
+      "kwargs: {'a': 10, 'b': 20}\n",
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
      ]
     }
    ],
    "source": [
-    "### A : *args, **kwargs => Permettent de passer un nb variables d'arguments à une fonction.\n",
-    "\n",
     "def test_args(*args, **kwargs):  # * => stocke variables non nommées dans un tuple. ** => variables nommées, collectées dans un dico\n",
     "    print(\"args:\", args)\n",
     "    print(\"kwargs:\", kwargs)\n",
@@ -46,8 +51,18 @@
    "id": "cb6a17c4-a9a6-4638-ad1b-062e8ace70f3",
    "metadata": {},
    "source": [
-    "## B : Décorateur et Wrapper\n",
-    "\n",
+    "## B : Décorateur et Wrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e434745d-0987-4262-9fdb-a35878244d07",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "### 🎩 Décorateur Python (Decorator)\n",
     "\n",
     "Un **décorateur** est une fonction qui prend une autre fonction en entrée, la modifie ou l’enrichit, puis renvoie une nouvelle fonction.  \n",
@@ -77,7 +92,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "842738ea-4d84-4ec6-9635-00c008f9475a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,11 +134,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82bf67b9-0d0d-4e65-90a3-5ccb72007d5d",
+   "id": "d56e6d3e-f176-4a1c-9744-791c8e395692",
    "metadata": {},
    "source": [
-    "## C : Fonctions anonymes (lambda)\n",
-    "\n",
+    "## C : Fonctions anonymes (lambda)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82bf67b9-0d0d-4e65-90a3-5ccb72007d5d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "### Qu’est-ce qu’une fonction lambda ?\n",
     "\n",
     "Une fonction **lambda** est une **fonction anonyme** (sans nom) qu’on écrit en une seule expression.  \n",
@@ -178,8 +210,18 @@
    "id": "20bcebfb-ac64-4ddd-a1b6-4b04945f3fc4",
    "metadata": {},
    "source": [
-    "## D : Fonctions d’ordre supérieur (Higher-Order Functions)\n",
-    "\n",
+    "## D : Fonctions d’ordre supérieur (Higher-Order Functions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "890eed3d-1403-454c-9417-ef0a59810be2",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "### 🧠 Définition\n",
     "\n",
     "Une **fonction d’ordre supérieur** est une fonction qui :\n",
@@ -200,7 +242,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "bfc17da8-91be-4c32-9b04-ece6f0474833",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -236,8 +285,18 @@
    "id": "f0e51568-9ae4-44e5-a8e9-90905e374673",
    "metadata": {},
    "source": [
-    "## E : Closures (Fermetures)\n",
-    "\n",
+    "## E : Closures (Fermetures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb26246-f45c-4591-90ab-96fc9d02161c",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "### 🧠 Définition\n",
     "\n",
     "Une **closure** est une fonction **qui se souvient de son environnement lexical**, même après que cet environnement ait été détruit.\n",
@@ -290,8 +349,18 @@
    "id": "64aed561-a2c1-4055-b7e9-6e1cedf890c7",
    "metadata": {},
    "source": [
-    "## F : Générateurs & `yield`\n",
-    "\n",
+    "## F : Générateurs & `yield`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9ecbd3-b373-4013-b7ac-20c02637b197",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "### 🧠 Qu’est-ce qu’un générateur ?\n",
     "\n",
     "Un **générateur** est une fonction **paresseuse** (lazy) qui ne renvoie pas un résultat immédiatement mais **un objet itérable**, qui **produit ses valeurs à la demande**, une par une.\n",
@@ -339,14 +408,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "494d620d-aa78-41d1-82cd-1e7f3d5bb777",
+   "cell_type": "markdown",
+   "id": "6f3a22ca-6ecb-4ae3-b027-817e406ef786",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## G : Compréhensions : `list`, `dict`, `set`, `gen`\n",
-    "\n",
+    "## G : Compréhensions : `list`, `dict`, `set`, `gen`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08212e84-e393-4f69-8ceb-119545296364",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
     "Les **compréhensions** sont des manières concises de créer des collections (listes, dictionnaires, ensembles, etc.) en **une seule ligne**, à partir d’un itérable.\n",
     "\n",
     "---\n",
@@ -408,36 +485,6 @@
     "resultats = [\"pair\" if x % 2 == 0 else \"impair\" for x in range(5)]\n",
     "print(resultats)  # ➜ ['pair', 'impair', 'pair', 'impair', 'pair']\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "552923b6-2c96-4ed3-bbbf-443d9f8b60e0",
-   "metadata": {},
-   "source": [
-    "\"\"\" Bloc 2 – Structures de données de base\n",
-    "🔧 Bloc 2 – Structures de données fondamentales\n",
-    "Connaissances visées\n",
-    "list, dict, set, tuple : méthodes, complexités\n",
-    "\n",
-    "Piles, files (deque), heaps (heapq)\n",
-    "\n",
-    "Tableaux 2D, matrices\n",
-    "\n",
-    "Dictionnaires imbriqués, objets JSON\n",
-    "\n",
-    "Comprendre les complexités (Big-O) des opés courantes\n",
-    "\n",
-    "Exos\n",
-    "Implémenter une pile et une file avec deque\n",
-    "\n",
-    "Créer un \"multi-set\" avec un dict\n",
-    "\n",
-    "Parcourir une matrice en spirale\n",
-    "\n",
-    "Implémenter une file de priorité avec heapq\n",
-    "\"\"\"\n",
-    "\n"
    ]
   },
   {
